--- a/UniverzalnaWebTrgovina/UWT.Web/UWT.Web.csproj
+++ b/UniverzalnaWebTrgovina/UWT.Web/UWT.Web.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\animations.min.css" />
     <Content Include="Content\default-user-icon.png" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
@@ -1025,6 +1026,9 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Admin\Users.cshtml" />
     <Content Include="Scripts\version.json" />
+    <Content Include="Views\Admin\PageLayouts.cshtml" />
+    <Content Include="Views\Admin\CreateLayout.cshtml" />
+    <Content Include="Views\Shared\PageLayouts\DefaultLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
