--- a/UniverzalnaWebTrgovina/UWT.Models/UWT.Models.csproj
+++ b/UniverzalnaWebTrgovina/UWT.Models/UWT.Models.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IImageContainer.cs" />
     <Compile Include="Interfaces\IPricing.cs" />
     <Compile Include="Interfaces\IUserOwned.cs" />
     <Compile Include="Interfaces\IShopMember.cs" />
@@ -90,6 +91,10 @@
     <Compile Include="Migrations\201505251126172_UserBlocked.cs" />
     <Compile Include="Migrations\201505251126172_UserBlocked.Designer.cs">
       <DependentUpon>201505251126172_UserBlocked.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505270900578_shopstyle.cs" />
+    <Compile Include="Migrations\201505270900578_shopstyle.Designer.cs">
+      <DependentUpon>201505270900578_shopstyle.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\PageLayout.cs" />
@@ -121,6 +126,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201505251126172_UserBlocked.resx">
       <DependentUpon>201505251126172_UserBlocked.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505270900578_shopstyle.resx">
+      <DependentUpon>201505270900578_shopstyle.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
