--- a/UniverzalnaWebTrgovina/UWT.Web/UWT.Web.csproj
+++ b/UniverzalnaWebTrgovina/UWT.Web/UWT.Web.csproj
@@ -202,7 +202,9 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\GalleryItem.css" />
+    <Content Include="Content\Images\bg.png" />
     <Content Include="Content\Images\User.png" />
+    <Content Include="Content\startbootstrap.css" />
     <Content Include="Content\uwt.css" />
     <Content Include="Content\uwtShops.css" />
     <Content Include="Content\Vitality.css" />
@@ -1050,6 +1052,7 @@
     <Content Include="Views\Merchant\EditPageStyle.cshtml" />
     <Content Include="Views\Shared\ImageEditor.cshtml" />
     <Content Include="Views\Merchant\MyShops.cshtml" />
+    <None Include="Views\Home\Shop.cshtml" />
     <None Include="Views\Merchant\CreateCategory.cshtml" />
     <None Include="Views\Merchant\CreateProduct.cshtml" />
     <None Include="Views\Merchant\CreateShop.cshtml" />
@@ -1059,6 +1062,9 @@
     <None Include="Views\Merchant\Products.cshtml" />
     <Content Include="Views\Shared\ShopThumbnail.cshtml" />
     <Content Include="Views\Shared\_ShopsLayout.cshtml" />
+    <Content Include="Views\Shared\_Navbar.cshtml" />
+    <Content Include="Views\Shared\CategoryListItem.cshtml" />
+    <Content Include="Views\Shared\ProductViewItem.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
