Basket finished, Invoices initialiued

--- a/UniverzalnaWebTrgovina/UWT.Models/UWT.Models.csproj
+++ b/UniverzalnaWebTrgovina/UWT.Models/UWT.Models.csproj
@@ -80,6 +80,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\Buying.cs" />
     <Compile Include="Extensions\Entities.cs" />
     <Compile Include="Extensions\Filtering.cs" />
     <Compile Include="Extensions\UwtContext.cs" />
