--- a/UniverzalnaWebTrgovina/UWT.Web/UWT.Web.csproj
+++ b/UniverzalnaWebTrgovina/UWT.Web/UWT.Web.csproj
@@ -165,6 +165,7 @@
     <Compile Include="App_Start\MapperConfig.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\BasketController.cs" />
+    <Compile Include="Controllers\InvoiceController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MerchantController.cs" />
     <Compile Include="Extensions\ContextUpdaters.cs" />
@@ -191,6 +192,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ImageEditorModel.cs" />
+    <Compile Include="Models\InvoiceViewModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\PageLayoutViewModel.cs" />
     <Compile Include="Models\PageStyleViewModel.cs" />
@@ -1057,6 +1059,7 @@
     <Content Include="Views\Merchant\MyShops.cshtml" />
     <None Include="Views\Basket\Index.cshtml" />
     <None Include="Views\Home\Shop.cshtml" />
+    <None Include="Views\Invoice\Invoice.cshtml" />
     <None Include="Views\Merchant\CreateCategory.cshtml" />
     <None Include="Views\Merchant\CreateProduct.cshtml" />
     <None Include="Views\Merchant\CreateShop.cshtml" />
