--- a/UniverzalnaWebTrgovina/UWT.Models/UWT.Models.csproj
+++ b/UniverzalnaWebTrgovina/UWT.Models/UWT.Models.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Extensions\Buying.cs" />
     <Compile Include="Extensions\Entities.cs" />
     <Compile Include="Extensions\Filtering.cs" />
+    <Compile Include="Extensions\Invoices.cs" />
     <Compile Include="Extensions\UwtContext.cs" />
     <Compile Include="Interfaces\IImageContainer.cs" />
     <Compile Include="Interfaces\IPricing.cs" />
